# PaddleOcr-Server

./: .gitignore  Claude.md  DOCKERHUB.md  Dockerfile  Dockerfile.cpu  README.md  docker-compose.cpu.yml  docker-compose.yml  pyproject.toml  server.py
