[project]
name = "paddleocr-server"
version = "1.0.0"
description = "PaddleOCR HTTP Server with full OCR functionality"
requires-python = ">=3.10,<3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.16.0",
    "python-multipart>=0.0.6",
    "paddleocr[all]>=3.0.0",
    "requests>=2.32.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0,<2.3.0",
]
